--- a/zonoapp/templates/pages/dashboard/dashboard.html
+++ b/zonoapp/templates/pages/dashboard/dashboard.html
@@ -44,13 +44,13 @@
                 <div aria-labelledby="durationOptions">
                   <ul class="nav nav-pills" role="tablist">
                     <li class="nav-item">
-                        <button type="button" class="nav-link avg active" role="tab" onclick="updateAverageHandlingTimeChart('daily', this)">Daily</button>
+                        <button type="button" class="nav-link avg active" role="tab" onclick="updateAverageHandlingTimeChart('daily', this)">Today</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="nav-link avg" role="tab" onclick="updateAverageHandlingTimeChart('weekly', this)">Weekly</button>
+                        <button type="button" class="nav-link avg" role="tab" onclick="updateAverageHandlingTimeChart('weekly', this)">7 Days</button>
                     </li>
                     <li class="nav-item">
-                        <button type="button" class="nav-link avg" role="tab" onclick="updateAverageHandlingTimeChart('monthly', this)">Monthly</button>
+                        <button type="button" class="nav-link avg" role="tab" onclick="updateAverageHandlingTimeChart('monthly', this)">30 Days</button>
                     </li>
                   </ul>
                 </div>
@@ -73,13 +73,13 @@
               <div aria-labelledby="durationOptions">
                 <ul class="nav nav-pills" role="tablist">
                   <li class="nav-item">
-                      <button type="button" class="nav-link active failed" role="tab" onclick="failedCallsCart('daily', this)">Daily</button>
+                      <button type="button" class="nav-link active failed" role="tab" onclick="failedCallsCart('daily', this)">Today</button>
                   </li>
                   <li class="nav-item">
-                      <button type="button" class="nav-link failed" role="tab" onclick="failedCallsCart('weekly', this)">Weekly</button>
+                      <button type="button" class="nav-link failed" role="tab" onclick="failedCallsCart('weekly', this)">7 Days</button>
                   </li>
                   <li class="nav-item">
-                      <button type="button" class="nav-link failed" role="tab" onclick="failedCallsCart('monthly', this)">Monthly</button>
+                      <button type="button" class="nav-link failed" role="tab" onclick="failedCallsCart('monthly', this)">30 Days</button>
                   </li>
                 </ul>
                   </div>
@@ -115,13 +115,13 @@
             <div class="table-responsive custom-scrollbar">
               <ul class="nav nav-pills" role="tablist">
                 <li class="nav-item">
-                    <button type="button" class="nav-link active update" role="tab" onclick="updateCallDistributionChart('daily', this)">Daily</button>
+                    <button type="button" class="nav-link active update" role="tab" onclick="updateCallDistributionChart('daily', this)">Today</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link update" role="tab" onclick="updateCallDistributionChart('weekly', this)">Weekly</button>
+                    <button type="button" class="nav-link update" role="tab" onclick="updateCallDistributionChart('weekly', this)">7 Days</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link update" role="tab" onclick="updateCallDistributionChart('monthly', this)">Monthly</button>
+                    <button type="button" class="nav-link update" role="tab" onclick="updateCallDistributionChart('monthly', this)">30 Days</button>
                 </li>
               </ul>
             </div>
@@ -146,13 +146,13 @@
             <div class="table-responsive custom-scrollbar">
               <ul class="nav nav-pills" role="tablist">
                 <li class="nav-item">
-                    <button type="button" class="nav-link active overview" role="tab" onclick="CallOverviewChart('daily', this)">Daily</button>
+                    <button type="button" class="nav-link active overview" role="tab" onclick="CallOverviewChart('daily', this)">Today</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link update overview" role="tab" onclick="CallOverviewChart('weekly', this)">Weekly</button>
+                    <button type="button" class="nav-link update overview" role="tab" onclick="CallOverviewChart('weekly', this)">7 Days</button>
                 </li>
                 <li class="nav-item">
-                    <button type="button" class="nav-link update overview" role="tab" onclick="CallOverviewChart('monthly', this)">Monthly</button>
+                    <button type="button" class="nav-link update overview" role="tab" onclick="CallOverviewChart('monthly', this)">30 Days</button>
                 </li>
               </ul>
             </div>
