--- a/zonoapp/templates/layout/sidebar.html
+++ b/zonoapp/templates/layout/sidebar.html
@@ -57,7 +57,7 @@
             </div>
           </li> 
           {% if request.user.role.role != 'Caller' and request.user.role.role != 'QA' %} 
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'create_campaign' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'create_campaign' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-email"></use>
             </svg>
@@ -66,7 +66,7 @@
             </svg><span class=" ">Create Campaign</span></a>
           </li>
           {% endif %}
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list_call_logs' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'list_call_logs' %}">
               <svg class="stroke-icon">
                 <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-contact"></use>
               </svg>
@@ -75,7 +75,7 @@
               </svg><span class=" ">Call Logs</span></a>  
           </li> 
           {% if request.user.role.role != 'QA' %}        
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'manage_campaign' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'manage_campaign' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-widget"></use>
             </svg>
@@ -93,7 +93,7 @@
               </h6>
             </div>
           </li>  
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'agent_create' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'agent_create' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-user"></use>
             </svg>
@@ -110,7 +110,7 @@
               </h6>
             </div>
           </li>  
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'list-user' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'list-user' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-user"></use>
             </svg>
@@ -126,7 +126,7 @@
               </h6>
      
           </li>   
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'live_call_list' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'live_call_list' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-contact"></use>
             </svg>
@@ -144,7 +144,7 @@
               </h6>
      
           </li>   
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'report_download' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'report_download' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-contact"></use>
             </svg>
@@ -160,7 +160,7 @@
             </div>
           </li>
 
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="#">
               <svg class="stroke-icon">
                 <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-home"></use>
               </svg>
@@ -172,7 +172,7 @@
               <li><a class="lan-5" href="/dashboard_02">Ecommerce</a></li>
             </ul>
           </li>
-          <li class="sidebar-list"> <i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+          <li class="sidebar-list"> </i><a class="sidebar-link sidebar-title" href="#">
               <svg class="stroke-icon">
                 <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-layout"></use>
               </svg>
@@ -200,7 +200,7 @@
                 </h6> -->
             </div>
           </li>
-          <!-- <li class="sidebar-list"> <i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="#">
+          <!-- <li class="sidebar-list"> </i><a class="sidebar-link sidebar-title" href="#">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-layout"></use>
             </svg>
@@ -210,7 +210,7 @@
             </span></a>
         
         </li> -->
-        <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}">
+        <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'voice_view' %}">
           <svg class="stroke-icon">
             <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-internationalization"></use>
           </svg>
@@ -230,7 +230,7 @@
               </h6>
             </div>
           </li>
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'provider_view' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'provider_view' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-learning"></use>
             </svg>
@@ -239,7 +239,7 @@
             </svg><span class=" ">Configuration</span></a>
           </li>
           {% endif %}
-          {% if request.user.role.role != 'Caller'  %}
+          {% if request.user.role.role != 'Caller' and  request.user.role.role != 'Admin' %}
           <li class="sidebar-main-title">
             <div>
               <h6 class="lan-22">
@@ -247,7 +247,7 @@
               </h6>
             </div>
           </li>
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'qa_parameter' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-task"></use>
             </svg>
@@ -264,7 +264,7 @@
               </h6>
             </div>
           </li>
-          <li class="sidebar-list"><i class="fa fa-thumb-tack"></i><a class="sidebar-link sidebar-title" href="{% url 'contact_sale' %}">
+          <li class="sidebar-list"></i><a class="sidebar-link sidebar-title" href="{% url 'contact_sale' %}">
             <svg class="stroke-icon">
               <use href="{% static 'assets/svg/icon-sprite.svg' %}#stroke-task"></use>
             </svg>
