--- a/zonoapp/templates/pages/campaign/create_campaign.html
+++ b/zonoapp/templates/pages/campaign/create_campaign.html
@@ -79,6 +79,7 @@
                           <label class="form-label" for="provider">Provider<span class="txt-danger">*</span></label>
                           <select class="form-select" id="provider" required="">
                             {<!-- dynamically populate provider options -->}
+                            
                             {% for provider in telephony_providers_list %}
                                <option value="{{ provider.id }}">{{ provider.provider_name }}</option>
                             {% endfor %}
@@ -309,7 +310,24 @@
   let contactList;
   let agent_prompt;
 
+  const processTypeSelect = document.getElementById('processType');
+const summarizationPrompt = document.getElementById('summarization_prompt');
 
+// Event listener for the change event on the dropdown
+processTypeSelect.addEventListener('change', function() {
+  const selectedValue = processTypeSelect.value;
+
+  // Set the value of the textarea based on the selected option
+  if (selectedValue === 'RCM') {
+    summarizationPrompt.value = 'default prompt for RCM value';
+  } else if (selectedValue === 'RCM_DENIAL') {
+    summarizationPrompt.value = 'default prompt for RCM DENIAL';
+  } else if (selectedValue === 'RETRIEVAL') {
+    summarizationPrompt.value = 'default prompt for RETRIEVAL'; 
+  } else if (selectedValue === 'OTHER') {
+    summarizationPrompt.value = 'other prompt .'; 
+  }
+});
   // Function to show toast
   function showToast(type, message) {
     Swal.fire({
