fix voice page bug

--- a/zonoapp/templates/layout/header.html
+++ b/zonoapp/templates/layout/header.html
@@ -43,7 +43,7 @@
                 id="userCredit"> 0.00 </strong></span>
             &nbsp;
             <div class="div-add-card">
-              <a href="{% url 'contact_sale' %}">&nbsp; <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
+              <a href="{% url 'add_payment' %}">&nbsp; <button class="btn btn-primary d-flex justify-content-center align-items-center" type="button" style="width: 10px;height: 80%;">
                 <i class="fa fa-plus"></i> 
               </button></a>
 
